2009-07-24 Magnus Hagdorn
 * cd_fd/cd.F90: indent program, use doxygen for comments
 * cd_fd/cd_implicit.F90: ditto
 * cd_fd/derivatives.F90: ditto
 * cd_fd/solvers.F90: ditto
 * cd_fd/doxy.conf: add doxygen configuration
 * data_handling/example.cdl: add a global attribute

2009-07-22 Ian Rutt
 * Removed duplicate files from top-level directory
 * Added ChangeLog
 * Fixed bug in plotCD.py. This /might/ however be dependent on the
	version of matplotlib used - should be checked when we have the
	machines we're going to use in front of us...