@@ -1,3 +1,6 @@
+2009-07-27 Magnus Hagdorn
+ * data_handling/plotThk.py: add script to plot ice thickness
+
 2009-07-24 Magnus Hagdorn
  * cd_fd/cd.F90: indent program, use doxygen for comments
  * cd_fd/cd_implicit.F90: ditto
